[gd_scene load_steps=13 format=3 uid="uid://bmg38p33gp6c"]

[ext_resource type="Script" uid="uid://bwx7reqbycw6j" path="res://scenes/ui/DialogueBalloon/DialogueBalloon3.gd" id="1_mswvj"]
[ext_resource type="Theme" uid="uid://yqpu1k43isuw" path="res://themes/kenney_rpg.tres" id="2_55qjb"]
[ext_resource type="FontFile" uid="uid://t17ntd6k15d0" path="res://assets/fonts/PixeloidSans-Bold.otf" id="3_5yde8"]
[ext_resource type="PackedScene" uid="uid://ckvgyvclnwggo" path="res://addons/dialogue_manager/dialogue_label.tscn" id="4_qmi0o"]
[ext_resource type="Script" uid="uid://cih5ekswndx7" path="res://scenes/ui/DialogueBalloon/WordyDialogueLabel.gd" id="6_i450q"]
[ext_resource type="Script" uid="uid://bb52rsfwhkxbn" path="res://addons/dialogue_manager/dialogue_responses_menu.gd" id="6_twqlo"]
[ext_resource type="PackedScene" uid="uid://bvomsgp50xmqo" path="res://scenes/ui/InputHint/InputHint.tscn" id="7_i450q"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_spyqn"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.329412, 0.329412, 0.329412, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ri4m3"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0njw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uy0d5"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Theme" id="Theme_qq3yp"]
default_font_size = 20
Button/styles/disabled = SubResource("StyleBoxFlat_spyqn")
Button/styles/focus = SubResource("StyleBoxFlat_ri4m3")
Button/styles/hover = SubResource("StyleBoxFlat_e0njw")
Button/styles/normal = SubResource("StyleBoxFlat_e0njw")
MarginContainer/constants/margin_bottom = 15
MarginContainer/constants/margin_left = 30
MarginContainer/constants/margin_right = 30
MarginContainer/constants/margin_top = 15
Panel/styles/panel = SubResource("StyleBoxFlat_uy0d5")

[node name="DialogueBalloon" type="CanvasLayer"]
layer = 100
script = ExtResource("1_mswvj")
skip_action = &"ui_skip_text"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = -640
dragging_enabled = false
dragger_visibility = 1

[node name="Control" type="Control" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSplitContainer" type="HSplitContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
split_offset = 1280
dragging_enabled = false
dragger_visibility = 1

[node name="Balloon" type="Control" parent="HSplitContainer/HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = SubResource("Theme_qq3yp")

[node name="Panel" type="Panel" parent="HSplitContainer/HSplitContainer/Balloon"]
clip_children = 2
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -183.0
offset_right = -19.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 1
theme = ExtResource("2_55qjb")

[node name="Dialogue" type="MarginContainer" parent="HSplitContainer/HSplitContainer/Balloon/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/Balloon/Panel/Dialogue"]
layout_mode = 2

[node name="CharacterLabel" type="RichTextLabel" parent="HSplitContainer/HSplitContainer/Balloon/Panel/Dialogue/VBoxContainer"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
mouse_filter = 1
theme_override_colors/default_color = Color(1, 1, 1, 1)
theme_override_fonts/normal_font = ExtResource("3_5yde8")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "Character"
fit_content = true
scroll_active = false

[node name="DialogueLabel" parent="HSplitContainer/HSplitContainer/Balloon/Panel/Dialogue/VBoxContainer" instance=ExtResource("4_qmi0o")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.862745, 0.862745, 0.862745, 1)
theme_override_fonts/normal_font = ExtResource("3_5yde8")
theme_override_fonts/bold_font = ExtResource("3_5yde8")
theme_override_fonts/bold_italics_font = ExtResource("3_5yde8")
theme_override_font_sizes/normal_font_size = 18
text = "Dialogue..."
script = ExtResource("6_i450q")
short_pause_at_characters = ","
pause_at_characters = ".?!,"
seconds_per_pause_step = 0.35000000000582077

[node name="BaloonInputHint" parent="HSplitContainer/HSplitContainer/Balloon/Panel/Dialogue" instance=ExtResource("7_i450q")]
unique_name_in_owner = true
visible = false
z_index = 20
layout_mode = 2
show_only_when_focused = false
hint_offset = Vector2(-25, -5)

[node name="SkipButton" type="Button" parent="HSplitContainer/HSplitContainer/Balloon"]
visible = false
custom_minimum_size = Vector2(170, 0)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 21.0
offset_top = -226.0
offset_right = 171.0
offset_bottom = -194.0
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_55qjb")
theme_override_font_sizes/font_size = 12
shortcut_in_tooltip = false
text = "Skip"

[node name="InputHint" parent="HSplitContainer/HSplitContainer/Balloon/SkipButton" instance=ExtResource("7_i450q")]
layout_mode = 1
offset_left = 596.0
offset_top = 134.0
offset_right = 596.0
offset_bottom = 134.0
action_name = "ui_skip_dialogue"
show_only_when_focused = false
hint_offset = Vector2(-5, -5)

[node name="Responses" type="MarginContainer" parent="HSplitContainer/HSplitContainer/Balloon"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -558.0
offset_right = 494.0
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 0

[node name="ResponsesMenu" type="VBoxContainer" parent="HSplitContainer/HSplitContainer/Balloon/Responses" node_paths=PackedStringArray("response_template")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
theme = ExtResource("2_55qjb")
theme_override_constants/separation = 2
script = ExtResource("6_twqlo")
response_template = NodePath("ResponseExample")

[node name="ResponseExample" type="Button" parent="HSplitContainer/HSplitContainer/Balloon/Responses/ResponsesMenu"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Response example"
autowrap_mode = 3

[node name="InputHint" parent="HSplitContainer/HSplitContainer/Balloon/Responses/ResponsesMenu/ResponseExample" instance=ExtResource("7_i450q")]
z_index = 5
y_sort_enabled = true
layout_mode = 1
offset_left = 581.0
offset_top = 34.0
offset_right = 581.0
offset_bottom = 34.0

[node name="Control" type="Control" parent="HSplitContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="gui_input" from="HSplitContainer/HSplitContainer/Balloon" to="." method="_on_balloon_gui_input"]
[connection signal="response_selected" from="HSplitContainer/HSplitContainer/Balloon/Responses/ResponsesMenu" to="." method="_on_responses_menu_response_selected"]
